more fixes for overflow and responsive

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -97,6 +97,8 @@ textarea {
    ========================================================================== */
 html, body{
   height:100%;
+  width:100%;
+  overflow-x: hidden;
   font-family: 'Cinzel', serif;
 }
 
@@ -106,7 +108,7 @@ html, body{
 }
 
 .home-bg{
-  width:calc(100% - 15px);
+  width:102%;
   height:100%;
   position: absolute;
 }
@@ -130,7 +132,7 @@ html, body{
 .navigation{
   background: #000000;
   position: absolute;
-  bottom: 100px;
+  bottom: 64px;
   width:100%;
   z-index: 11;
   .social{
@@ -369,9 +371,29 @@ ul{
 @media (max-width:991px) {
   .navigation {
     bottom: unset;
+    width: 102%;
 
     ul li{
       display: block;
     }
   }
+
+  .overlay{
+    padding: 30px 10px;
+    font-size: 15px;
+    top: 75px;
+  }
+
+  #slideshow .home-bg{
+    background-position: center;
+    width: 105%;
+    height: 800px;
+  }
+}
+
+@media (max-width:1200px) {
+  .overlay{
+    padding-top: 38px;
+  }
+
 }
